[package]
name = "todo"
version = "0.1.1"
description = "Command-line TO-DO application"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/todo"
readme = "README.md"
license = "MIT or APACHE-2.0"
keywords = ["todo", "cli", "to-do"]
categories = ["Command line utilities"]
edition = "2021"

[dependencies]
serde_json = "1.0"
