[package]
name = "todo"
version = "0.1.1"
description = "Command-line TO-DO application"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/todo"
readme = "README.md"
license = "MIT or APACHE-2.0"
keywords = ["todo", "cli", "to-do"]
categories = ["Command line utilities"]
edition = "2021"

[lib]
name = "todo"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
harness = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "todoapp"
path = "src/main.rs"
test = false
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
