[package]
name = "scheduler"
version = "1.0.1"
description = "Schedule and manage your tasks in a `TO-DO` or diary style"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/scheduler"
readme = "README.md"
license = "MIT or APACHE-2.0"
keywords = ["scheduler", "cli", "to-do"]
categories = ["Command line utilities"]
edition = "2021"

[lib]
name = "scheduler"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
harness = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schapp"
path = "src/main.rs"
test = false
bench = false

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
